# rita-firmware

./: CMakeLists.txt  FreeRTOSConfig.h  README.md  Rita_OS.py  Rita_V2.0.py  Rita_V2_Test.py  main.py  platformio.ini
Libraries/: Button_Handler_JR.py  JR_I2C_LCD_Lib.py  LCD_handler.py  Rita_IO.py  Rita_OS.py  Rita_V2_Test.py  button_handler.py  menu_lcd.py  pico_i2c_lcd_test.py
Licenses/: monkmakes License.rtf
RitaOS/: boot.py
RitaOS/_rita_old/: LCD_handler.py  LED_handler.py  OLD_OS.py  Rita_time.py  button_handler.py  motor_handler.py  pico_i2c_lcd_test.py
RitaOS/ai_modules/: Rita_AI.py
RitaOS/io_driver_modules/: rita_io.py
RitaOS/os/: rita_core_os.py  rita_menu_os.py  rita_test.py
Rita_Backups_and_stuff/: Button_+_LED_Test.py  Button_Handler_JR.py  Button_w_interrupts.py  LED_handler.py  Rita_IO.py  Rita_V2.0.py  backup.py  button_states.py  pmon_test.py  project.pico-w-go  relay_test1.py
Rita_program/: LCD_handler.py  motor_handler.py
lib/rita_io/: buttons_driver.cpp  buttons_driver.hpp  lcd_driver.cpp  lcd_driver.hpp  led_driver.cpp  led_driver.hpp  moisture_sensor_driver.cpp  motor_driver.cpp  motor_driver.hpp  rita_io.cpp  rita_io.h  rita_ui.cpp  rita_ui.h  sensor_driver.cpp  sensor_driver.hpp
lib/rita_rl/: data_manager.cpp  data_poller.cpp
lib/rita_ui/: rita_ui.cpp
lib/utils/: utils.cpp  utils.hpp
src/: blink_rtos_test.hpp  led_driver.cpp  led_driver.hpp  main.c  main.cpp  scheduler.cpp  scheduler.h
test/embedded_tests/: blink_rtos_test.hpp
test/test_desktop/: blink_test.hpp  bootstrapper.cpp
test/test_embedded/: blink_test.hpp  bootstrapper.cpp
